Version 2.7.14dev:

* A3000 chip RAM was erroneously set to 1 MB.

Version 2.7.13dev:

* Show launch dialog when running configs directly from command line.
* Show launch errors (if any) in error message box when running from cmdline.
* Use expect_version option to verify that FS-UAE version matches.
* Launcher can be started with a zip/lha file containing disk images [jbl007].
* Launcher can be started with more than one floppy image path as
  command line arguments.
* Launcher can be started with more than one CD-ROM image path as
  command line arguments (will default to CD32 model in this case).
* Properly load last config file (if applicable) when starting.
* Unsaved config options will no longer be restored on startup (last
  used game or config will be fully reloaded).
* When using --config:key=value options, start with empty config (unless
  a specific config is loaded via the command line).
* Store maximized = 0 state properly when window is unmaximized.
* Imported updated translations from crowdin.com.

Version 2.7.12dev:

* Added settings for for FS-UAE Arcade.
* Minor fixes for scan/refresh dialogs.
* Fix for the xrandr refresh rate detector.
* Change variant rating buttons into a choice control.
* Fixed rating variants (broke in 2.7.10dev).
* More code cleanup.

Version 2.7.11dev:

* Revert to HTTP due to certificate validation not working properly.

Version 2.7.10dev:

* It is now possible (but highly discouraged) to put config options in
  advanced settings to function is global defaults. You will get a
  warning message on the status bar if you do this.
* If a required ROM is not find, be more specific about which one.
* Launch dialog replaced with "inline" status information.
* Disable start button while FS-UAE is running.
* Notice on status bar when custom config options are in use.
* Warning on status bar when custom uae_* config options are in use.
* Config controls show auto-selected value.