@@ -1,5 +1,6 @@
 Version 2.7.14dev:
 
+* Fixed recently introduced problem using joystick configuration tool.
 * A3000 chip RAM was erroneously set to 1 MB.
 
 Version 2.7.13dev:
